2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneOptionsPanel.cs: Fix Bug 614551 - Cannot clear
	  icon selection once made in Project Settings.

2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Better build output.

2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/IPadViewXib.xft.xml:
	* templates/IPhoneViewXib.xft.xml:
	* templates/IPadViewController.xft.xml:
	* templates/IPadApplicationXib.xft.xml:
	* templates/IPhoneViewController.xft.xml:
	* templates/IPhoneApplicationXib.xft.xml: Unify categories.

2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.csproj: Remove Mono.Addins targets as
	  they seem to be broken.

2010-06-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.csproj:
	* MonoDevelop.IPhone.addin.xml:
	* templates/IPhonePlist.xft.xml: Re-specialized the plist
	  template so categorization remains sane.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/IPhoneViewController.xft.xml: Fix template.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.csproj: Renamed a file.

	* IPhoneCodeBehind.cs:
	* CodeBehindGenerator.cs: Renamed generator. Track base class
	  API.

	* gtk-gui/gui.stetic: Flush refs.

	* IPhoneProject.cs:
	* IPhoneBuildExtension.cs: Cosmetic.

2010-06-07  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehind.cs:
	* IPhoneProject.cs:
	* CodeBehindGenerator.cs:
	* IPhoneBuildExtension.cs:
	* MonoDevelop.IPhone.csproj: Move more sharable code from
	  MonoDevelop.IPhone to MonoDevelop.MacDev.

2010-06-06  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Moved lots of re-usable code from
	  iphone build extension to new
	  MonoDevelop.MacDev.MacBuildUtilities class.

2010-06-05  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProjectConfiguration.cs: Fix possible exception.
